# strategic_sandbox

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: random-player-intervention.yml
data/config/: simulation.json
data/countries/: argentina.json  belgium.json  brazil.json  canada.json  china.json  czechoslovakia.json  france.json  germany.json  great_britain.json  india.json  italy.json  japan.json  mexico.json  netherlands.json  poland.json  soviet_union.json  spain.json  sweden.json  turkey.json  united_states.json
data/events/: 1930_core_events.json  1930_rfc_extended_events.json
data/factions/: ger_bureaucracy.json  ger_military.json  ger_workers.json
data/policies/: administrative_reform.json  agricultural_subsidy.json  centralize_authority.json  corruption_crackdown.json  cut_military_budget.json  decentralize_governance.json  expand_welfare.json  fiscal_consolidation.json  increase_education.json  increase_military_budget.json  industrial_subsidy.json  infrastructure_investment.json  intelligence_expansion.json  labor_protections.json  lower_taxes.json  press_censorship.json  press_freedom.json  propaganda_campaign.json  raise_taxes.json  security_tightening.json
data/provinces/: 1930_core_nodes.json
data/scenarios/: 1930_minimal.json  1930_rfc_compliance.json  1930_with_start_policies.json
docs/: README.md  hardening-strict-numeric-validation.md  m0-10-diagnostics.md  m0-2-calendar-and-types.md  m0-3-game-state.md  m0-4-time-system.md  m0-5-rng-service.md  m0-6-logging.md  m0-7-data-loader.md  m0-8-save-load.md  m0-9-runner.md  m1-1-country-state.md  m1-10-runner-monthly-wiring.md  m1-11-scenario-loader.md  m1-12-economy-stability-coupling.md  m1-13-scenario-starting-policies.md  m1-14-diagnostics-surfaces-growth.md  m1-15-policy-duration-tracking.md  m1-16-faction-csv.md  m1-17-end-to-end-tests.md  m1-2-faction-state.md  m1-3-budget.md  m1-4-policy-data.md  m1-5-policy-system.md  m1-6-faction-reactions.md  m1-7-stability-tick.md  m1-8-economy-tick.md  m1-9-monthly-pipeline.md  m2-1-player-country.md  m2-10-state-comparison.md  m2-11-replay-verify.md  m2-12-verify-strict.md  m2-13-verify-tolerance.md  m2-14-replay-target-date.md  m2-16-government-authority-state.md  m2-17-order-execution-skeleton.md  m2-18-enact-policy-execution-gate.md  m2-19-adjust-budget-execution-gate.md  m2-2-pause-resume.md  m2-20-command-rejection-reporting.md  (+82 more)
include/leviathan/core/: entities.hpp  game_date.hpp  game_state.hpp  ids.hpp  interest_group_kind.hpp  log_entry.hpp  player_commands.hpp  random_state.hpp  result.hpp  simulation_config.hpp  string_utils.hpp
include/leviathan/systems/: ai_policy.hpp  annual_stats.hpp  bias_noise.hpp  bias_total.hpp  bureaucratic_self_protection.hpp  commands.hpp  data_loader.hpp  diagnostics.hpp  economy_system.hpp  effect_desire.hpp  event_effects.hpp  event_engine.hpp  event_evaluator.hpp  event_firer.hpp  faction_conflict.hpp  faction_demands.hpp  faction_interest_bias.hpp  faction_system.hpp  information_accuracy.hpp  interest_group_system.hpp  logging_system.hpp  monthly_pipeline.hpp  order_execution.hpp  policy_system.hpp  propaganda_bias.hpp  random_service.hpp  reported_value.hpp  (+6 more)
rfc/: README.md  RFC-000-overview.md  RFC-001-development-contract.md  RFC-010-prototype-v0_1.md  RFC-020-politics-internal.md  RFC-030-economy-budget.md  RFC-040-diplomacy-war-ai.md  RFC-050-events-hidden-truth.md  RFC-060-technical-architecture.md  RFC-070-data-formats.md  RFC-080-research-formulas.md  RFC-090-roadmap.md
src/: CMakeLists.txt  main.cpp
src/leviathan/core/: CMakeLists.txt  game_date.cpp  game_state.cpp  interest_group_kind.cpp  string_utils.cpp
src/leviathan/systems/: CMakeLists.txt  ai_policy.cpp  annual_stats.cpp  bias_noise.cpp  bias_total.cpp  bureaucratic_self_protection.cpp  commands.cpp  data_loader.cpp  diagnostics.cpp  economy_system.cpp  effect_desire.cpp  event_effects.cpp  event_engine.cpp  event_evaluator.cpp  event_firer.cpp  faction_conflict.cpp  faction_demands.cpp  faction_interest_bias.cpp  faction_system.cpp  information_accuracy.cpp  interest_group_system.cpp  logging_system.cpp  monthly_pipeline.cpp  order_execution.cpp  policy_system.cpp  propaganda_bias.cpp  random_service.cpp  reported_value.cpp  runner.cpp  save_system.cpp  scenario_loader.cpp  stability_system.cpp  svg_export.cpp  time_system.cpp
src/leviathan/systems/internal/: json_helpers.cpp  json_helpers.hpp  numeric_guards.hpp
tests/: CMakeLists.txt  smoke_test.cpp  test_main.cpp
tests/core/: game_date_test.cpp  game_state_test.cpp  ids_test.cpp  result_test.cpp  simulation_config_test.cpp  string_utils_test.cpp
tests/integration/: issue_110_ai_scorer_test.cpp  issue_112_player_choice_runner_test.cpp  m0_end_to_end_test.cpp  m1_end_to_end_test.cpp  m2_end_to_end_test.cpp  m3_end_to_end_test.cpp  m4_dom_contract_test.cpp  m5_event_pipeline_test.cpp  rcr_1_rfc_compliance_test.cpp
tests/systems/: ai_policy_test.cpp  asymptotic_add_trajectory_test.cpp  bias_noise_test.cpp  commands_event_choice_test.cpp  commands_test.cpp  data_loader_test.cpp  diagnostics_test.cpp  economy_system_test.cpp  event_effects_test.cpp  event_engine_issue_110_test.cpp  event_engine_issue_112_test.cpp  event_engine_test.cpp  event_evaluator_test.cpp  event_firer_test.cpp  faction_conflict_test.cpp  faction_demands_test.cpp  faction_influence_weights_test.cpp  faction_radicalism_events_test.cpp  faction_system_test.cpp  information_accuracy_test.cpp  interest_group_system_test.cpp  logging_system_test.cpp  m7_10_technocrat_emigration_test.cpp  m7_5_military_pressure_test.cpp  m7_6_media_scandal_test.cpp  m7_7_intelligence_expansion_test.cpp  m7_8_local_tax_revolt_test.cpp  m7_9_student_protest_test.cpp  monthly_pipeline_test.cpp  order_execution_test.cpp  policy_system_test.cpp  propaganda_bias_test.cpp  random_service_test.cpp  rcr_1_event_extensions_test.cpp  reported_value_test.cpp  runner_test.cpp  save_system_test.cpp  scenario_loader_test.cpp  stability_system_test.cpp  svg_export_test.cpp  (+1 more)
tools/: random_player_intervention.py
